--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "latest",
+    "next": "15.4.2-canary.27",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
